fix: improve template list table flex layout
Remove maxHeight from tableStyle and overflow from container CSS to fix table layout issues. Add flex-1 and min-h-0 classes to enable proper flex behavior.

--- a/core-web/apps/dotcms-ui/src/app/portlets/dot-templates/dot-template-list/dot-template-list.component.scss
+++ b/core-web/apps/dotcms-ui/src/app/portlets/dot-templates/dot-template-list/dot-template-list.component.scss
@@ -2,7 +2,6 @@
     display: flex;
     flex-direction: column;
     height: 100%;
-    overflow: auto;
 
     &::ng-deep listing-data-table tr {
         cursor: pointer;
